--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,12 @@ unbind M
   set -g mouse off \;\
   display 'Mouse: OFF'
 
+# edit configuration
+bind e new-window -n "~/.tmux.conf.local" "sh -c '\${EDITOR:-nano} ~/.tmux.conf.local && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\"'"
+
+# reload configuration
+bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
+
 # THEME
 set -g status-bg colour235
 set -g status-fg yellow
@@ -25,6 +31,8 @@ set -g status-fg yellow
 #set-window-option -g window-status-current-fg brightred #orange
 #set-window-option -g window-status-current-bg colour236
 #set-window-option -g window-status-current-attr bright
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
 
 set -g status-interval 60
 set -sg escape-time 1000
